# aliked-lightglue-onnx

./: .gitignore  CMakeLists.txt  README.md  onnx_testing.py  package.xml
examples/: aliked_lightglue.cpp  test_aliked.cpp
include/: ExtractorType.h
include/Aliked/: AlikedOnnxManager.h  Config.h  IOnnxRunner.h  OnnxRunner.h
include/Lightglue/: ILightglueManager.h  LightglueConf.h  LightglueOnnxManager.h  OnnxRunner.h
models/: aliked-t16-top1k-tum.onnx  aliked-t16-top2k-tum.onnx
src/OnnxRunner/: Aliked.cpp  Lightglue.cpp
